// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCarousel /> by default matches with snapshot 1`] = `
Array [
  <div
    className="marger__StyledMarger-q3lecu-0 kOdsyC"
  >
    <div
      data-radium={true}
      style={
        Object {
          "gridColumn": 1,
          "gridRow": 1,
          "opacity": 1,
          "transition": "all .8s ease-in-out",
          "visibility": "visible",
        }
      }
    >
      <p>
        Foo
      </p>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "gridColumn": 1,
          "gridRow": 1,
          "opacity": 0,
          "pointerEvents": "none",
          "transition": "all .8s ease-in-out",
          "visibility": "hidden",
        }
      }
    >
      <p>
        Bar
      </p>
    </div>
  </div>,
  <div
    className="marger__StyledMarger-q3lecu-0 kbXjqc"
  >
    <div
      data-radium={true}
      onClick={[Function]}
      style={
        Object {
          "background": "#19b4fa",
          "cursor": "pointer",
          "height": 6,
          "marginRight": 5,
          "transition": "background .4s ease-in-out",
          "width": 6,
        }
      }
    />
    <div
      data-radium={true}
      onClick={[Function]}
      style={
        Object {
          "background": "#fff",
          "cursor": "pointer",
          "height": 6,
          "marginRight": 5,
          "transition": "background .4s ease-in-out",
          "width": 6,
        }
      }
    />
  </div>,
]
`;

exports[`<SimpleCarousel /> with only one item matches with snapshot 1`] = `
<div
  className="marger__StyledMarger-q3lecu-0 hDKFKn"
>
  <div
    data-radium={true}
    style={
      Object {
        "gridColumn": 1,
        "gridRow": 1,
        "opacity": 1,
        "transition": "all .8s ease-in-out",
        "visibility": "visible",
      }
    }
  >
    <p>
      Foo
    </p>
  </div>
</div>
`;

exports[`<SimpleCarousel /> with some props matches with snapshot 1`] = `
<div
  className="marger__StyledMarger-q3lecu-0 hDKFKn"
>
  <div
    data-radium={true}
    style={
      Object {
        "gridColumn": 1,
        "gridRow": 1,
        "opacity": 1,
        "transition": "all .8s ease-in-out",
        "visibility": "visible",
      }
    }
  >
    <p
      activePaginationColor="Custom active pagination color"
      paginationColor="Custom pagination color"
    >
      Foo
    </p>
  </div>
</div>
`;
